fixing UI size on Mobile Screen

--- a/css/main.css
+++ b/css/main.css
@@ -481,7 +481,7 @@ a {
   }
 
   .subtitle {
-    font-size: clamp(1rem, 5vw, 2rem);
+    font-size: clamp(2rem, 5vw, 2.5rem);
   }
 
   .input-container {
@@ -491,10 +491,22 @@ a {
 
   .input-wrapper input {
     width: 100%;
+    padding: .6rem 1.5rem;
+    font-size: 1rem;
+  }
+
+  .input-wrapper label {
+    font-size: 1rem;
   }
 
   .show-btn {
     right: 2%;
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .show-btn img {
+    width: 100%;
   }
 
   .register-btn,
@@ -509,6 +521,37 @@ a {
   .err-msg {
     top: 100%;
     font-size: 10px;
+  }
+
+  .radio-container {
+    margin-top: 3rem;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 1.5rem;
+  }
+
+  .radio-title {
+    width: 100%;
+    font-size: 1.4rem;
+  }
+
+  .radio-wrapper input {
+    padding: 2rem;
+  }
+
+  .radio-wrapper label {
+    font-size: .9rem;
+  }
+
+  .agreement, .sign-in {
+    font-size: .8rem;
+  }
+
+  .input-wrapper input:focus ~ label {
+  font-size: clamp(10px, 4vw, 14px);
+  }
+
+  .input-wrapper input.fill ~ label {
+  font-size: clamp(10px, 4vw, 14px) !important;
   }
 }
 
